--- a/Client code/MobileSocial/res/layout/my_bottle.xml
+++ b/Client code/MobileSocial/res/layout/my_bottle.xml
@@ -4,37 +4,9 @@
     android:layout_height="fill_parent"
     android:background="@drawable/friends_layout_bg" >
 
-    <RelativeLayout
-        android:id="@+id/my_bottle_title"
-        android:layout_width="fill_parent"
-        android:layout_height="55dip"
-        android:background="@drawable/webviewtab_bg" >
-
-        <Button
-            android:id="@+id/my_bottle_back"
-            android:layout_width="70dip"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dip"
-            android:background="@drawable/title_btn_back"
-            android:text="返回"
-            android:textColor="#fff"
-            android:textSize="14sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="我的瓶子"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-    </RelativeLayout>
-
     <ListView
         android:id="@+id/my_bottle_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/my_bottle_title" />
+        android:layout_height="fill_parent"/>
 
 </RelativeLayout>
