Add new file : BottleEditText.java

--- a/Client code/MobileSocial/res/layout/chuck_pop.xml
+++ b/Client code/MobileSocial/res/layout/chuck_pop.xml
@@ -4,9 +4,62 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
+        android:id="@+id/lj_throw_bottle_title"
+        android:layout_width="fill_parent"
+        android:layout_height="55dip"
+        android:background="#1e90ff" >
+
+        <LinearLayout
+            android:id="@+id/lj_throw_bottle_back"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/yg_abc_ic_ab_back_holo_light"
+                android:gravity="center" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="返回"
+                android:textColor="#FFFFFF"
+                android:textSize="17sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="漂流瓶"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/lj_chuck_layout1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lj_throw_bottle_title" >
+
+        <com.lj.driftbottle.ui.BottleEditText
+            android:id="@+id/lj_driftbottle_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp" />
 
         <EditText
             android:id="@+id/lj_chuck_edit"
@@ -16,7 +69,8 @@
             android:layout_marginRight="20dip"
             android:layout_marginTop="50dip"
             android:background="@drawable/bottle_stationery"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/lj_chuck_bottle1"
@@ -26,36 +80,6 @@
             android:layout_centerVertical="true"
             android:src="@drawable/bottle_type_text"
             android:visibility="gone" />
-
-        <RelativeLayout
-            android:id="@+id/lj_chuck_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="55dip"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/webviewtab_bg" >
-
-            <Button
-                android:id="@+id/lj_chuck_cancle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2.5dip"
-                android:background="@drawable/chat_bottom_keyboard"
-                android:visibility="visible" />
-
-            <Button
-                android:id="@+id/lj_chuck_throw"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="5dip"
-                android:layout_toRightOf="@id/lj_chuck_cancle"
-                android:background="@drawable/chat_speak"
-                android:text="扔出去"
-                android:textColor="#fff"
-                android:textSize="20sp"
-                android:visibility="visible" />
-        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
