--- a/Client code/MobileSocial/res/layout/lj_my_bottles_list_item.xml
+++ b/Client code/MobileSocial/res/layout/lj_my_bottles_list_item.xml
@@ -1,43 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="70dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/lj_bottle_list_img"
-        android:layout_width="75dp"
-        android:layout_height="75dp"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:gravity="center_vertical" >
 
-    <TextView
-        android:id="@+id/lj_bottle_list_text"
-        android:textColor="#000000"
-        android:gravity="center_vertical"
-        android:textSize="15sp"
-        android:layout_width="150dp"
-        android:layout_height="fill_parent" 
-        android:layout_marginLeft="10dp"/>
-    
-    <ImageView 
-        android:background="#000"
-        android:layout_width="2dp"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="5dp"/>
-    
-    <TextView
-        android:id="@+id/lj_bottle_list_status"
-        android:text="status"
-        android:textColor="#000000"
-        android:gravity="center_vertical"
-        android:textSize="15sp"
-        android:layout_width="30dp"
-        android:layout_height="fill_parent" 
-        android:layout_marginLeft="5dp"/>
-    <ImageView 
-        android:background="#000"
-        android:layout_width="2dp"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="5dp"/>
-    
+        <ImageView
+            android:id="@+id/lj_bottle_item_img"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:scaleType="centerCrop" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_weight="1" >
+
+            <ImageView 
+                android:id="@+id/lj_bottle_item_sex"
+                android:scaleType="fitCenter"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/yg_appkefu_ic_sex_male"/>
+            <TextView
+                android:id="@+id/lj_bottle_item_address"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/lj_bottle_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:textSize="15sp" />
+    </LinearLayout>
 
 </LinearLayout>
