--- a/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
+++ b/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
@@ -7,33 +7,76 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/lj_bottle_info_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
-
-        <TextView
-            android:id="@+id/lj_bottle_info_history"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bottle_stationery"
-            android:gravity="top" />
+            android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/lj_bottle_info_append"
-            android:layout_width="fill_parent"
-            android:layout_height="200dp"
-            android:background="@drawable/bottle_stationery"
-            android:gravity="top" />
+            <com.lj.driftbottle.ui.BottleHistoryText
+                android:id="@+id/lj_bottle_info_history"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
 
-        <Button
-            android:id="@+id/lj_bottle_info_reply"
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:background="#ddd" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:text="回应他"
+                android:textSize="20sp" />
+
+            <com.lj.driftbottle.ui.LineEditText
+                android:id="@+id/lj_bottle_info_append"
+                style="?android:attr/textViewStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@null"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="reply" />
+            android:orientation="horizontal" >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="扔回海里" />
+
+            <TextView
+                android:id="@+id/lj_tbottle_info_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="5-150字"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/lj_bottle_info_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="发送" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
