--- a/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
+++ b/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
@@ -62,7 +62,7 @@
                 android:text="扔回海里" />
 
             <TextView
-                android:id="@+id/lj_tbottle_info_num"
+                android:id="@+id/lj_bottle_info_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
