--- a/Client code/MobileSocial/res/layout/tp_moment_photo_partial.xml
+++ b/Client code/MobileSocial/res/layout/tp_moment_photo_partial.xml
@@ -37,8 +37,9 @@
             android:id="@+id/publicactivityadpter_photo"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:minHeight="250dp"
             android:background="@color/gray"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitXY" />
         
         <include layout="@layout/tp_feed_comment_button_thumbnail" />
     </RelativeLayout>
