--- a/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
+++ b/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
@@ -38,78 +38,96 @@
                 android:background="#ddd" />
         </LinearLayout>
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/lj_bottle_info_remind_delete"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="10dp" >
-
-            <TextView
-                android:id="@+id/lj_bottle_info_layout_remind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:gravity="left"
-                android:text="回应他"
-                android:textColor="#826461"
-                android:textSize="16dp" />
-
-            <TextView
-                android:id="@+id/lj_bottle_info_reply_num"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:text="还差5个字" />
-        </RelativeLayout>
-
-        <com.lj.driftbottle.ui.LineEditText
-            android:id="@+id/lj_bottle_info_append"
-            style="?android:attr/textViewStyle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:gravity="center"
             android:layout_marginTop="10dp"
-            android:background="@null"
-            android:lineSpacingExtra="8dp"
-            android:textSize="20sp" />
+            android:text="瓶子已被删除，无法回复"
+            android:textColor="#826461"
+            android:visibility="gone"
+            android:textSize="18sp" />
 
         <LinearLayout
+            android:id="@+id/lj_bottle_info_edit_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
-            android:layout_marginTop="25dp"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/lj_bottle_info_throwback_btn"
-                style="@style/lj_bottle_throw_btn_style"
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="扔回海里" />
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp" >
+
+                <TextView
+                    android:id="@+id/lj_bottle_info_layout_remind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left"
+                    android:text="回应他"
+                    android:textColor="#826461"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/lj_bottle_info_reply_num"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right"
+                    android:text="还差5个字" />
+            </RelativeLayout>
+
+            <com.lj.driftbottle.ui.LineEditText
+                android:id="@+id/lj_bottle_info_append"
+                style="?android:attr/textViewStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp"
+                android:background="@null"
+                android:lineSpacingExtra="8dp"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp"
+                android:layout_marginLeft="45dp"
+                android:layout_marginRight="45dp"
+                android:layout_marginTop="25dp"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/lj_bottle_info_throwback_btn"
+                    style="@style/lj_bottle_throw_btn_style"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="扔回海里" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/lj_bottle_info_reply_btn"
+                    style="@style/lj_bottle_throw_btn_style"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="发送" />
+            </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/lj_bottle_info_reply_btn"
-                style="@style/lj_bottle_throw_btn_style"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="发送" />
+                android:layout_height="20dp" />
         </LinearLayout>
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="20dp" />
     </LinearLayout>
 
 </ScrollView>
