--- a/Client code/MobileSocial/res/layout/lj_throw_back_invalid_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_throw_back_invalid_dialog.xml
@@ -15,7 +15,7 @@
     <!-- "@android:color/white" -->
 
     <TextView 
-	    android:text="确认删除瓶子？"
+	    android:text="您是瓶子的所有者"
 	    android:layout_width="250dp"
         android:layout_height="wrap_content"
 	    android:layout_marginTop="15dp"
@@ -24,7 +24,18 @@
 	    android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
-
+    
+    <TextView 
+	    android:text="无法扔回"
+	    android:layout_width="250dp"
+        android:layout_height="wrap_content"
+	    android:layout_marginTop="15dp"
+	    android:gravity="center"
+	    android:textColor="#1E90FF"
+	    android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp" />
+    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="60.0dip"
@@ -34,26 +45,16 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/lj_my_bottle_delete_dialog_button_cancel"
+            android:id="@+id/lj_throw_back_invalid_dialog_button_confirm"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="取消"
-            android:textColor="#1E90FF" />
-
-        <Button
-            android:id="@+id/lj_my_bottle_delete_dialog_button_confirm"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20.0dip"
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
             android:text="确认"
             android:textColor="#1E90FF"/>
     </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout"
